[package]
name = "whatsit"
version = "0.1.1"
description = "Snip a region of the screen and ask Claude about it"
edition = "2021"

[lib]
name = "whatsit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
image = "0.25"

[profile.release]
opt-level = "s"
lto = true
strip = true
